# ternary-operator-macro

./: Cargo.toml  README.md
src/: lib.rs
